Enable CI when pushing to main branch.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,15 @@ on:
       - '.gitignore'
       - 'Makefile'
       - 'tools/**'
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - '.gitignore'
+      - 'Makefile'
+      - 'tools/**'
 
 name: Check, Test, and Format
 
