minor updates: readme, cargo, gnark, ci

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,21 +2,25 @@ on:
   pull_request:
     branches:
       - main
+      - release/v*
     paths-ignore:
       - 'docs/**'
       - 'README.md'
       - '.gitignore'
       - 'Makefile'
       - 'tools/**'
+      - 'scripts/**'
   push:
     branches:
       - main
+      - release/v*
     paths-ignore:
       - 'docs/**'
       - 'README.md'
       - '.gitignore'
       - 'Makefile'
       - 'tools/**'
+      - 'scripts/**'
 
 name: Check, Test, and Format
 
